--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/samir717le/aah/main/img/Arcade_Alliance_Hosting.png">
  <title>Arcade Alliance Hosting</title>
  <link rel="stylesheet" href="styles.css">
  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
  <!--Open Graph-->
  
- <meta property="og:title" content="ARCADE ALLIANCE HOSTING">
+<meta property="og:title" content="ARCADE ALLIANCE HOSTING">
 <meta property="og:description" content="Empowering Your Digital Universe!">
 <meta property="og:image" content="https://cdn.discordapp.com/attachments/1266780357743738910/1267356874353807491/ARCADE-1.png?ex=66a92651&is=66a7d4d1&hm=fd991a7f09819c1fdff9c102d18816dce2a0353f7970e2c4642b835cdab87ef0&">
 <meta property="og:url" content="https://arcadealliacehosting.com">
@@ -33,7 +34,7 @@
   <div class="container">
    <div class="mobi">
    <img
-    src="/img/Arcade_Alliance_Hosting.png"
+    src="https://raw.githubusercontent.com/samir717le/aah/main/img/Arcade_Alliance_Hosting.png"
     alt="Arcade Alliance Hosting" class="logo"><h2>Arcade Alliance Hosting</h2>
     </div>
 
