--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
      <li><a href="#home">Home</a></li>
      <li><a href="#about">About</a></li>
      <li><a href="#pricing">Pricing</a></li>
-     <li><a href="#tos">TOS</a></li>
-     <li><a href="#privacy">Privacy Policy</a></li>
+     <li><a href="tos.html">TOS</a></li>
+     <li><a href="privacy.html">Privacy Policy</a></li>
      <li><a href="#contact">Contact</a></li>
     </ul>
    </nav>
@@ -175,11 +175,12 @@
    <p>If you have any questions or need support, feel free to reach out to us
     through the following channels:</p>
    <ul>
-    <li>Email: support@arcadealliancehosting.com</li>
+    <li>Email: contact@arcadealliancehosting.com</li>
     <li>Discord: <a href="https://discord.com/invite/bVsTVcDV"
       target="_blank">Join our server</a></li>
     <li>Panel: <a href="https://panel.arcadealliancehosting.com"
       target="_blank">Access Panel</a></li>
+    <li>Billing: <a href="aracdealliacehosting.com/billig/"></a></li>
    </ul>
   </div>
  </section>
@@ -190,11 +191,12 @@
    <p>&copy; 2024 Arcade Alliance Hosting. All rights reserved.</p>
    <div class="social-media">
     <a href="https://discord.com/invite/bVsTVcDV" target="_blank">Discord</a>
+    <a href="tos.html">Terms Of Service</a>
+    <a href="privacy.html">Privacy Policy</a>
    </div>
   </div>
  </footer>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
  <script src="scripts.js"></script>
 </body>
-
-   </html>
+</html>
