--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+we<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -180,7 +180,7 @@
       target="_blank">Join our server</a></li>
     <li>Panel: <a href="https://panel.arcadealliancehosting.com"
       target="_blank">Access Panel</a></li>
-    <li>Billing: <a href="aracdealliacehosting.com/billig/"></a></li>
+    <li>Billing: <a href="aracdealliacehosting.com/billig/">Access Billing</a></li>
    </ul>
   </div>
  </section>
